# clip-semantic-search

./: .env.example  .gitignore  LICENSE  README.md  add_images.py  config.py  features.py  index.py  logger.py  main.py  pyproject.toml  search.py  store.py  validation.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  DESIGN_DECISIONS.md
src/momento/: __init__.py  add_images.py  cli.py  config.py  diagnostics.py  features.py  index.py  lock.py  search.py  validation.py
src/momento/cli/: __init__.py  cli.py  controller.py  file_picker.py  query_manager.py
src/momento/core/: __init__.py  config.py  exceptions.py  validation.py
src/momento/diagnostics/: __init__.py  benchmark_perf.py  benchmark_retrieval.py  diagnostics.py  doctor.py  stats.py
src/momento/embedding/: clip_backend.py  legacy_compat.py
src/momento/indexing/: __init__.py  checkpoint.py  indexer.py
src/momento/ingestion/: __init__.py  image_ingest.py  media_ingest.py  ocr.py  yolo.py
src/momento/retrieval/: __init__.py  fusion.py  pipeline.py  query_expansion.py  recall.py  rerank.py
src/momento/search/: __init__.py
src/momento/storage/: __init__.py  cache.py  exact_index.py  manager.py  metadata_store.py  vector_store.py
tests/: test_index.py  test_integration.py  test_validation.py
